Add health endpoint to v2 service
* For health check.
* Change metrics namespace.
