# v2/api/archive-query-service/v2/query_services_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.3.0
-// - protoc             v6.32.0
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v3.21.12
 // source: query_services.proto
 
 package api
@@ -16,8 +16,8 @@ import (
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.32.0 or later.
-const _ = grpc.SupportPackageIsVersion7
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
 
 const (
 	ArchiveQueryService_GetTransactionByHash_FullMethodName       = "/qubic.v2.archive.pb.ArchiveQueryService/GetTransactionByHash"
@@ -27,6 +27,7 @@ const (
 	ArchiveQueryService_GetComputorsListsForEpoch_FullMethodName  = "/qubic.v2.archive.pb.ArchiveQueryService/GetComputorsListsForEpoch"
 	ArchiveQueryService_GetLastProcessedTick_FullMethodName       = "/qubic.v2.archive.pb.ArchiveQueryService/GetLastProcessedTick"
 	ArchiveQueryService_GetProcessedTickIntervals_FullMethodName  = "/qubic.v2.archive.pb.ArchiveQueryService/GetProcessedTickIntervals"
+	ArchiveQueryService_GetHealth_FullMethodName                  = "/qubic.v2.archive.pb.ArchiveQueryService/GetHealth"
 )
 
 // ArchiveQueryServiceClient is the client API for ArchiveQueryService service.
@@ -40,6 +41,7 @@ type ArchiveQueryServiceClient interface {
 	GetComputorsListsForEpoch(ctx context.Context, in *GetComputorsListForEpochRequest, opts ...grpc.CallOption) (*GetComputorsListForEpochResponse, error)
 	GetLastProcessedTick(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetLastProcessedTickResponse, error)
 	GetProcessedTickIntervals(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetProcessedTicksIntervalsResponse, error)
+	GetHealth(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*HealthResponse, error)
 }
 
 type archiveQueryServiceClient struct {
@@ -51,8 +53,9 @@ func NewArchiveQueryServiceClient(cc grpc.ClientConnInterface) ArchiveQueryServi
 }
 
 func (c *archiveQueryServiceClient) GetTransactionByHash(ctx context.Context, in *GetTransactionByHashRequest, opts ...grpc.CallOption) (*GetTransactionByHashResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetTransactionByHashResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTransactionByHash_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTransactionByHash_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -60,8 +63,9 @@ func (c *archiveQueryServiceClient) GetTransactionByHash(ctx context.Context, in
 }
 
 func (c *archiveQueryServiceClient) GetTransactionsForTick(ctx context.Context, in *GetTransactionsForTickRequest, opts ...grpc.CallOption) (*GetTransactionsForTickResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetTransactionsForTickResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTransactionsForTick_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTransactionsForTick_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -69,8 +73,9 @@ func (c *archiveQueryServiceClient) GetTransactionsForTick(ctx context.Context, 
 }
 
 func (c *archiveQueryServiceClient) GetTransactionsForIdentity(ctx context.Context, in *GetTransactionsForIdentityRequest, opts ...grpc.CallOption) (*GetTransactionsForIdentityResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetTransactionsForIdentityResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTransactionsForIdentity_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTransactionsForIdentity_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -78,8 +83,9 @@ func (c *archiveQueryServiceClient) GetTransactionsForIdentity(ctx context.Conte
 }
 
 func (c *archiveQueryServiceClient) GetTickData(ctx context.Context, in *GetTickDataRequest, opts ...grpc.CallOption) (*GetTickDataResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetTickDataResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTickData_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetTickData_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -87,8 +93,9 @@ func (c *archiveQueryServiceClient) GetTickData(ctx context.Context, in *GetTick
 }
 
 func (c *archiveQueryServiceClient) GetComputorsListsForEpoch(ctx context.Context, in *GetComputorsListForEpochRequest, opts ...grpc.CallOption) (*GetComputorsListForEpochResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetComputorsListForEpochResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetComputorsListsForEpoch_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetComputorsListsForEpoch_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -96,8 +103,9 @@ func (c *archiveQueryServiceClient) GetComputorsListsForEpoch(ctx context.Contex
 }
 
 func (c *archiveQueryServiceClient) GetLastProcessedTick(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetLastProcessedTickResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetLastProcessedTickResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetLastProcessedTick_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetLastProcessedTick_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -105,8 +113,19 @@ func (c *archiveQueryServiceClient) GetLastProcessedTick(ctx context.Context, in
 }
 
 func (c *archiveQueryServiceClient) GetProcessedTickIntervals(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetProcessedTicksIntervalsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetProcessedTicksIntervalsResponse)
-	err := c.cc.Invoke(ctx, ArchiveQueryService_GetProcessedTickIntervals_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetProcessedTickIntervals_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *archiveQueryServiceClient) GetHealth(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*HealthResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(HealthResponse)
+	err := c.cc.Invoke(ctx, ArchiveQueryService_GetHealth_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -115,7 +134,7 @@ func (c *archiveQueryServiceClient) GetProcessedTickIntervals(ctx context.Contex
 
 // ArchiveQueryServiceServer is the server API for ArchiveQueryService service.
 // All implementations must embed UnimplementedArchiveQueryServiceServer
-// for forward compatibility
+// for forward compatibility.
 type ArchiveQueryServiceServer interface {
 	GetTransactionByHash(context.Context, *GetTransactionByHashRequest) (*GetTransactionByHashResponse, error)
 	GetTransactionsForTick(context.Context, *GetTransactionsForTickRequest) (*GetTransactionsForTickResponse, error)
@@ -124,12 +143,16 @@ type ArchiveQueryServiceServer interface {
 	GetComputorsListsForEpoch(context.Context, *GetComputorsListForEpochRequest) (*GetComputorsListForEpochResponse, error)
 	GetLastProcessedTick(context.Context, *emptypb.Empty) (*GetLastProcessedTickResponse, error)
 	GetProcessedTickIntervals(context.Context, *emptypb.Empty) (*GetProcessedTicksIntervalsResponse, error)
+	GetHealth(context.Context, *emptypb.Empty) (*HealthResponse, error)
 	mustEmbedUnimplementedArchiveQueryServiceServer()
 }
 
-// UnimplementedArchiveQueryServiceServer must be embedded to have forward compatible implementations.
-type UnimplementedArchiveQueryServiceServer struct {
-}
+// UnimplementedArchiveQueryServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedArchiveQueryServiceServer struct{}
 
 func (UnimplementedArchiveQueryServiceServer) GetTransactionByHash(context.Context, *GetTransactionByHashRequest) (*GetTransactionByHashResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetTransactionByHash not implemented")
@@ -152,7 +175,11 @@ func (UnimplementedArchiveQueryServiceServer) GetLastProcessedTick(context.Conte
 func (UnimplementedArchiveQueryServiceServer) GetProcessedTickIntervals(context.Context, *emptypb.Empty) (*GetProcessedTicksIntervalsResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetProcessedTickIntervals not implemented")
 }
+func (UnimplementedArchiveQueryServiceServer) GetHealth(context.Context, *emptypb.Empty) (*HealthResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetHealth not implemented")
+}
 func (UnimplementedArchiveQueryServiceServer) mustEmbedUnimplementedArchiveQueryServiceServer() {}
+func (UnimplementedArchiveQueryServiceServer) testEmbeddedByValue()                             {}
 
 // UnsafeArchiveQueryServiceServer may be embedded to opt out of forward compatibility for this service.
 // Use of this interface is not recommended, as added methods to ArchiveQueryServiceServer will
@@ -162,6 +189,13 @@ type UnsafeArchiveQueryServiceServer interface {
 }
 
 func RegisterArchiveQueryServiceServer(s grpc.ServiceRegistrar, srv ArchiveQueryServiceServer) {
+	// If the following call pancis, it indicates UnimplementedArchiveQueryServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
 	s.RegisterService(&ArchiveQueryService_ServiceDesc, srv)
 }
 
@@ -291,6 +325,24 @@ func _ArchiveQueryService_GetProcessedTickIntervals_Handler(srv interface{}, ctx
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ArchiveQueryService_GetHealth_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(emptypb.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArchiveQueryServiceServer).GetHealth(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ArchiveQueryService_GetHealth_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArchiveQueryServiceServer).GetHealth(ctx, req.(*emptypb.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ArchiveQueryService_ServiceDesc is the grpc.ServiceDesc for ArchiveQueryService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -325,6 +377,10 @@ var ArchiveQueryService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetProcessedTickIntervals",
 			Handler:    _ArchiveQueryService_GetProcessedTickIntervals_Handler,
+		},
+		{
+			MethodName: "GetHealth",
+			Handler:    _ArchiveQueryService_GetHealth_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
